--- a/index.html
+++ b/index.html
@@ -111,33 +111,33 @@
                             </symbol>
                             <symbol class="note with-enharmonic" id="icon-7" viewBox="0 0 40 40">
                                 <text x="15%" y="0" dy=".5em">F</text>
-                                <text x="60%" y="25%" class="flat-sharp">&#X266F;</text>
+                                <text x="60%" y="25%" class="sharp">&#X266F;</text>
                                 <text x="10%" y="80%" dy=".5em" class="enharmonic">G</text>
-                                <text x="55%" y="105%" class="enharmonic flat-sharp">&#X266D;</text>
+                                <text x="55%" y="105%" class="enharmonic flat">&#X266D;</text>
                             </symbol>
                             <symbol class="note with-enharmonic" id="icon-8" viewBox="0 0 40 40">
                                 <text x="15%" y="0" dy=".5em">D</text>
-                                <text x="65%" y="25%" class="flat-sharp">&#X266D;</text>
+                                <text x="65%" y="25%" class="flat">&#X266D;</text>
                                 <text x="10%" y="80%" dy=".5em" class="enharmonic">C</text>
-                                <text x="55%" y="105%" class="enharmonic flat-sharp">&#X266F;</text>
+                                <text x="55%" y="105%" class="enharmonic sharp">&#X266F;</text>
                             </symbol>
                             <symbol class="note with-enharmonic" id="icon-9" viewBox="0 0 40 40">
                                 <text x="15%" y="0" dy=".5em">A</text>
-                                <text x="60%" y="25%" class="flat-sharp">&#X266D;</text>
+                                <text x="60%" y="25%" class="flat">&#X266D;</text>
                                 <text x="10%" y="80%" dy=".5em" class="enharmonic">G</text>
-                                <text x="55%" y="105%" class="enharmonic flat-sharp">&#X266F;</text>
+                                <text x="55%" y="105%" class="enharmonic sharp">&#X266F;</text>
                             </symbol>
                             <symbol class="note with-enharmonic" id="icon-10" viewBox="0 0 40 40">
                                 <text x="15%" y="0" dy=".5em">E</text>
-                                <text x="60%" y="25%" class="flat-sharp">&#X266D;</text>
+                                <text x="60%" y="25%" class="flat">&#X266D;</text>
                                 <text x="10%" y="80%" dy=".5em" class="enharmonic">D</text>
-                                <text x="55%" y="105%" class="enharmonic flat-sharp">&#X266F;</text>
+                                <text x="55%" y="105%" class="enharmonic sharp">&#X266F;</text>
                             </symbol>
                             <symbol class="note with-enharmonic" id="icon-11" viewBox="0 0 40 40">
                                 <text x="15%" y="0" dy=".5em">B</text>
                                 <text x="60%" y="25%" class="flat-sharp">&#X266D;</text>
                                 <text x="10%" y="80%" dy=".5em" class="enharmonic">A</text>
-                                <text x="55%" y="105%" class="enharmonic flat-sharp">&#X266F;</text>
+                                <text x="55%" y="105%" class="enharmonic flat">&#X266F;</text>
                             </symbol>
                             <symbol class="note" id="icon-12" viewBox="0 0 40 40">
                                 <text x="50%" y="50%" dy=".5em" text-anchor="middle">F</text>
