--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      @font-face {
+        font-family: 'Source Serif Variable';
+        font-stretch: normal;
+        font-style: normal;
+        font-weight: 200 900;
+        src: url('/SourceSerifVariable-Roman.otf.woff2') format('woff2'),
+          url('/SourceSerifVariable-Roman.otf.woff') format('woff');
+      }
+
+      @font-face {
+        font-family: 'Source Serif Variable';
+        font-stretch: normal;
+        font-style: italic;
+        font-weight: 200 900;
+        src: url('/SourceSerifVariable-Italic.otf.woff2') format('woff2'),
+          url('/SourceSerifVariable-Italic.otf.woff') format('woff');
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
