--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           url('/SourceSerifVariable-Italic.otf.woff') format('woff');
       }
     </style>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
     <noscript>
